# cfg-interview

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml
apps/bonds/: admin.py  apps.py  enums.py  models.py  serializers.py  urls.py  validators.py  views.py
apps/bonds/migrations/: 0001_initial.py  0002_alter_bond_maturity_date.py
apps/bonds/tests/: test_api.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
bonds/: enums.py  models.py  serializers.py  urls.py  validators.py  views.py
bonds/tests/: test_api.py
bondservice/: asgi.py  settings.py  urls.py  wsgi.py
locale/cs/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.mo  django.po
